[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/UIComponents/InventoryInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/UIComponents/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/Icons/coins_silver.png" type="Texture" id=4]
[ext_resource path="res://assets/Icons/clock.png" type="Texture" id=5]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryInfo" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Stats" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_right = 106.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="HBoxContainer" parent="Stats"]
margin_right = 96.0
margin_bottom = 20.0

[node name="Day" type="Label" parent="Stats/Date"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "DAY"
valign = 2

[node name="DateLabel" type="Label" parent="Stats/Date"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = "17"
align = 1
valign = 2

[node name="Money" type="HBoxContainer" parent="Stats"]
margin_top = 24.0
margin_right = 96.0
margin_bottom = 44.0

[node name="MoneIcon" type="TextureRect" parent="Stats/Money"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 4 )
expand = true

[node name="MoneyLabel" type="Label" parent="Stats/Money"]
margin_left = 24.0
margin_right = 74.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )
text = "99999"
align = 2
valign = 1

[node name="Time" type="HBoxContainer" parent="Stats"]
margin_top = 48.0
margin_right = 96.0
margin_bottom = 68.0

[node name="TimeIcon" type="TextureRect" parent="Stats/Time"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 5 )
expand = true

[node name="APLabel" type="Label" parent="Stats/Time"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "4"
align = 2
valign = 1

[node name="Max" type="Label" parent="Stats/Time"]
margin_left = 48.0
margin_right = 78.0
margin_bottom = 19.0
rect_min_size = Vector2( 30, 0 )
text = "/ 4"

[node name="Actions" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -151.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="HBoxContainer" parent="Actions"]
margin_right = 151.0
margin_bottom = 32.0

[node name="InventoryIcon" type="TextureRect" parent="Actions/Inventory"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="OpenInventory" type="Button" parent="Actions/Inventory"]
margin_left = 36.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
toggle_mode = true
text = "Inventory"

[node name="Market" type="HBoxContainer" parent="Actions"]
margin_top = 36.0
margin_right = 151.0
margin_bottom = 68.0

[node name="MarketIcon" type="TextureRect" parent="Actions/Market"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="ToMarket" type="Button" parent="Actions/Market"]
margin_left = 36.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
text = "To Market"

[node name="Play" type="HBoxContainer" parent="Actions"]
margin_top = 72.0
margin_right = 151.0
margin_bottom = 104.0

[node name="PlayIcon" type="TextureRect" parent="Actions/Play"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="ToDialogue" type="Button" parent="Actions/Play"]
margin_left = 36.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
text = "Play"

[node name="Pause" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Actions/Inventory/OpenInventory" to="." method="_on_OpenInventory_toggled"]
[connection signal="pressed" from="Actions/Market/ToMarket" to="." method="_on_ToMarket_pressed"]
[connection signal="pressed" from="Actions/Play/ToDialogue" to="." method="_on_ToDialogue_pressed"]
